# app-streamlit

./: .gitignore  pyproject.toml  style.css
src/data/raw/: Portal Transparencia Despesas Gerais - Exercício 2025.csv
src/scripts/: dashboard.py  main.py
